<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/zeroDaysEditCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    app:cardBackgroundColor="@color/zero_days_color"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <LinearLayout
        android:id="@+id/zeroDaysEditLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_inner_margin"
            android:background="@color/input_background"
            android:hint="@string/hint"
            android:minHeight="@dimen/card_inner_margin" />

        <Button
            android:id="@+id/zeroDaysEditDeleteButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:layout_marginTop="72dp"
            android:text="@string/delete_card" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/upButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/card_margin"
                android:background="?selectableItemBackground"
                android:contentDescription="@string/up"
                android:src="@drawable/ic_arrow_up_24"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/downButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:background="?selectableItemBackground"
                android:contentDescription="@string/down"
                android:src="@drawable/ic_arrow_down_24"
                android:visibility="visible" />

            <Button
                android:id="@+id/zeroDaysEditCancelButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/zeroDaysEditSaveButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:enabled="false"
                android:minHeight="48dp"
                android:text="@string/save" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>