<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/makeCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    app:cardBackgroundColor="@color/add_card_color"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/makeCardInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_inner_margin"
            android:background="@color/input_background"
            android:hint="@string/hint"
            android:minHeight="@dimen/card_inner_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/makeCardSaveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_inner_margin"
            android:layout_marginEnd="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:enabled="false"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/makeCardInputEditText" />

        <Button
            android:id="@+id/makeCardCancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_margin"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/makeCardSaveButton"
            app:layout_constraintTop_toTopOf="@id/makeCardSaveButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>